; ModuleID = '/home/carl/AnghaBench/tmux/extr_arguments.c_args_print_add_argument.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_arguments.c_args_print_add_argument.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i64*, i8*)* @args_print_add_argument to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @args_print_add_argument(i8** %0, i64* %1, i8* %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8** %0, i8*** %4, align 8
  store i64* %1, i64** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8**, i8*** %4, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i8**, i8*** %4, align 8
  %15 = load i64*, i64** %5, align 8
  %16 = call i32 (i8**, i64*, i8*, ...) @args_print_add(i8** %14, i64* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %13, %3
  %18 = load i8*, i8** %6, align 8
  %19 = call i8* @args_escape(i8* %18)
  store i8* %19, i8** %7, align 8
  %20 = load i8**, i8*** %4, align 8
  %21 = load i64*, i64** %5, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 (i8**, i64*, i8*, ...) @args_print_add(i8** %20, i64* %21, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @free(i8* %24)
  ret void
}

declare dso_local i32 @args_print_add(i8**, i64*, i8*, ...) #1

declare dso_local i8* @args_escape(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
